<resources>

    <string name="app_name">风险地图</string>
    <string name="main_link">http://www.yianjt.com/</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="file_list_tv_wjlb">文件列表</string>
    <string name="map_list_tv_fxdtlb">风险地图列表</string>
    <string name="map_list_tv_fhwjlb">文件列表</string>
    <string name="map_tv_fhdtlb">地图列表</string>
    <string name="map_tv_fxdt">风险地图</string>
    <string name="map_tv_xztc">选择图层</string>
    <string name="map_tv_xx">工具</string>
    <string name="map_tv_dtlb">地图列表</string>
    <string name="map_tv_fhdt">返回地图</string>
    <string name="select_type_tv_xxlb">功能列表</string>
    <string name="select_type_tclb">图层列表</string>
    <string name="select_type_tv_gl">管理</string>
    <string name="select_type_tv_fxfl">风险分类</string>
    <string name="select_type_tv_sxlb">顺序量表</string>
    <string name="select_type_tv_fxjzlb">风险矩阵列表</string>
    <string name="select_type_btn_fhdt">返回地图</string>
    <string name="select_type_btn_fxrt">风险热图</string>
    <string name="select_type_btn_fxlb">地图信息</string>
    <string name="select_type_btn_fltj">分类统计</string>
    <string name="select_type_btn_fxcb">风险成本</string>
     <string name="select_type_btn_xgx">相关性</string>
    <string name="select_type_btn_xztc">选择图层</string>
    <string name="select_type_btn_glq">过滤器</string>
    <string name="select_type_btn_glh">管理后</string>
    <string name="select_type_btn_glq2">管理前</string>
    <string name="select_type_btn_jhglyxjz">机会概率影响矩阵</string>
    <string name="select_type_btn_wxglyxjz">威胁概率影响矩阵</string>
    <string name="select_type_btn_qr">确认</string>
    <string name="select_type_btn_yx">影响</string>
    <string name="select_type_btn_gl">概率</string>
     <string name="select_type_btn_fh">返回</string>
    <string name="sd_error">SD卡不存在</string>
    <string name="msgTitle">提示</string>
    <string name="risk_list_tv_fx">风险</string>
    <string name="risk_list_tv_ys">因素</string>
    <string name="risk_list_tv_mb">目标</string>
    <string name="risk_list_btn_fhdt">返回地图</string>
    <string name="risk_list_tv_fxlb">地图信息</string>
    <string name="risk_list_item_tv_mc">名称</string>
    <string name="risk_list_item_tv_bh">编号</string>
    <string name="risk_list_item_tv_lb">类别</string>
    <string name="risk_list_item_tv_lx">类型</string>
    <string name="risk_list_item_tv_bt">标题</string>
    <string name="risk_list_item_tv_bz">备注</string>
    <string name="risk_cost_tv_xzwxgldsxlb">选择威胁概率的顺序量表</string>
    <string name="risk_cost_tv_yx">影响</string>
    <string name="risk_cost_tv_xzjhgldsxlb">选择机会概率的顺序量表</string>
    <string name="risk_cost_item_tv_fxmc">风险名称</string>
    <string name="risk_cost_item_tv_fxdh">风险代号</string>
    <string name="risk_cost_item_tv_fxlx">风险类型</string>
    <string name="risk_cost_item_tv_glqfxgl">管理前风险概率</string>
    <string name="risk_cost_item_tv_glqfxyxz">管理前风险影响值</string>
    <string name="risk_cost_item_tv_glqfxyxqwz">管理前风险影响期望值</string>
    <string name="risk_cost_item_tv_fxglcb">风险管理成本</string>
    <string name="risk_cost_item_tv_glhfxgl">管理后风险概率</string>
    <string name="risk_cost_item_tv_glhfxyxz">管理后风险影响值</string>
    <string name="risk_cost_item_tv_glhfxyxqwz">管理后风险影响期望值</string>
    <string name="risk_cost_item_tv_fxyxqwz">风险影响期望值</string>
    <string name="risk_cost_item_tv_fxglsy">风险管理收益</string>
    <string name="risk_cost_item_tv_fxgljsy">风险管理净收益</string>
    <string name="risk_cost_item_tv_fxglsyycbbl">风险管理收益与成本比例</string>
    <string name="risk_cost_tv_fxcb">风险成本</string>
    <string name="risk_filter_tv_glq">过滤器</string>
    <string name="select_type_btn_glqfxpf">管理前风险评分</string>
    <string name="select_type_btn_glhfxpf">管理后风险评分</string>
    <string name="select_type_btn_glqfxyx">管理前风险影响</string>
    <string name="select_type_btn_glhfxyx">管理后风险影响</string>
    <string name="risk_filter_tv_fxfl">风险分类：</string>
    <string name="risk_filter_tv_qbfl">全部分类</string>
    <string name="risk_filter_tv_sxlb">顺序量表：</string>
    <string name="risk_filter_tv_qblb">全部量表</string>
    <string name="risk_filter_btn_glqpf">管理前评分</string>
    <string name="risk_filter_btn_glh">管理后</string>
    <string name="risk_filter_btn_cx">查询</string>
    <string name="risk_filter_btn_dy">>=</string>
    <string name="risk_filter_item_tv_mc">名称</string>
    <string name="risk_filter_item_tv_bh">编号</string>
    <string name="risk_filter_item_tv_lb">类别</string>
    <string name="risk_filter_item_tv_lx">类型</string>
    <string name="risk_hot_tv_fxrt">风险热图</string>
    <string name="risk_hot_btn_xz">选择</string>
    <string name="risk_hot_btn_fxpx">风险排序</string>
    <string name="risk_hot_btn_glq">管理前</string>
    <string name="risk_order_tv_fxpx">风险排序</string>
    <string name="risk_order_btn_fxrt">风险热图</string>
    <string name="risk_statistics_tv_fltj">分类统计</string>
    <string name="image_btn_hy">还原</string>
    <string name="image_btn_fhdt">返回地图</string>
    <string name="risk_zj">总计：</string>
    <string name="welcome_jr">进入</string>

</resources>