<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exit_layout"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/confirm_dialog_bg2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="@string/select_type_tv_xxlb"
        android:textColor="#333"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:layout_width="200dp"
                android:layout_height="40dip"
                android:background="@drawable/btn_style_white"
                android:gravity="center"
                android:onClick="OnSelectClickListener"
                android:tag="1"
                android:text="@string/select_type_btn_fhdt"
                android:textColor="#333"
                android:textSize="18sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="40dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/btn_style_white"
                android:gravity="center"
                android:onClick="OnSelectClickListener"
                android:tag="2"
                android:text="@string/select_type_btn_fxrt"
                android:textColor="#333"
                android:textSize="18sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="40dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/btn_style_white"
                android:gravity="center"
                android:onClick="OnSelectClickListener"
                android:tag="3"
                android:text="@string/select_type_btn_fxlb"
                android:textColor="#333"
                android:textSize="18sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="40dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/btn_style_white"
                android:gravity="center"
                android:onClick="OnSelectClickListener"
                android:tag="4"
                android:text="@string/select_type_btn_fltj"
                android:textColor="#333"
                android:textSize="18sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="40dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/btn_style_white"
                android:gravity="center"
                android:onClick="OnSelectClickListener"
                android:tag="5"
                android:text="@string/select_type_btn_fxcb"
                android:textColor="#333"
                android:textSize="18sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="40dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/btn_style_white"
                android:gravity="center"
                android:onClick="OnSelectClickListener"
                android:tag="6"
                android:text="@string/select_type_btn_glq"
                android:textColor="#333"
                android:textSize="18sp" />

            <Button
                android:layout_width="200dp"
                android:layout_height="40dip"
                android:layout_marginTop="4dip"
                android:background="@drawable/btn_style_white"
                android:gravity="center"
                android:onClick="OnSelectClickListener"
                android:tag="7"
                android:text="@string/select_type_btn_xgx"
                android:textColor="#333"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>