<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exit_layout"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:background="@drawable/confirm_dialog_bg2"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        android:text="@string/select_type_tv_gl"
        android:textColor="#333"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn1"
            android:layout_width="200dp"
            android:layout_height="35dip"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:onClick="OnSelectClickListener"
            android:tag="1"
            android:text="@string/select_type_btn_glqfxpf"
            android:textColor="#333"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="200dp"
            android:layout_height="35dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:onClick="OnSelectClickListener"
            android:tag="2"
            android:text="@string/select_type_btn_glhfxpf"
            android:textColor="#333"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="200dp"
            android:layout_height="35dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:onClick="OnSelectClickListener"
            android:tag="3"
            android:text="@string/select_type_btn_glqfxyx"
            android:textColor="#333"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="200dp"
            android:layout_height="35dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_style_white"
            android:gravity="center"
            android:onClick="OnSelectClickListener"
            android:tag="4"
            android:text="@string/select_type_btn_glhfxyx"
            android:textColor="#333"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>