<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:theme="@android:style/Theme.Light.NoTitleBar" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/left_title_button_fanhui"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_right"
            android:onClick="OnLeftBtnListener"
            android:text="@string/map_tv_dtlb"
            android:textColor="#fff"
            android:textSize="14sp" />

        <Button
            android:id="@+id/center_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/title_btn_right"
            android:onClick="OnCenterBtnListener"
            android:text="@string/map_tv_xztc"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/right_btn"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/title_btn_right"
            android:onClick="OnRightBtnListener"
            android:text="@string/map_tv_xx"
            android:textColor="#ffffff" />
    </RelativeLayout>
    <AbsoluteLayout
        android:id="@+id/mapLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="#ffffff" >
    </AbsoluteLayout>
  
</LinearLayout>