<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Light.NoTitleBar" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/left_title_button_fanhui"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_right"
            android:onClick="OnLeftBtnListener"
            android:text="@string/risk_list_btn_fhdt"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/risk_filter_tv_glq"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true"
                android:gravity="center"
                android:layout_weight="1"
                android:onClick="OnSelectCondition"
                android:tag="0" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/risk_filter_tv_fxfl"
                    android:textColor="@color/blue"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/risk_cato"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/risk_filter_tv_qbfl"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true"
                android:gravity="center"
                     android:layout_weight="1"
                android:onClick="OnSelectCondition"
                android:tag="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/risk_filter_tv_sxlb"
                    android:textColor="@color/blue"
                    android:textSize="12sp" />

                <TextView
                     android:id="@+id/risk_vector"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/risk_filter_tv_qblb"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true"
                android:gravity="center"
               android:layout_weight="1"
                android:onClick="OnSelectCondition"
                android:tag="2" >

                <TextView
                    android:id="@+id/risk_manage"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/risk_filter_btn_glqpf"
                    android:textColor="@color/blue"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:clickable="true"
                     android:layout_weight="1"
                android:gravity="center"
                android:tag="3" >

                <TextView
                    android:id="@+id/risk_symbol1"
                    android:layout_width="20dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/min_score_et"
                    android:layout_width="40dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:gravity="left|center_vertical"
                    android:text=""
                    android:textColor="@color/blue"
                    android:textSize="12sp" />
                 <TextView
                    android:id="@+id/risk_symbol2"
                    android:layout_width="20dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/max_score_et"
                    android:layout_width="40dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    android:gravity="left|center_vertical"
                    android:text=""
                    android:textColor="@color/blue"
                    android:textSize="12sp" />
            </LinearLayout>
            
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/mm_title_act_btn"
            android:onClick="query"
            android:text="@string/risk_filter_btn_cx"
            android:textColor="#fff"
            android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/contentTitleLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/dz_bord" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:id="@+id/contentLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="3dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:gravity="center"
            android:text="@string/risk_zj"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/risk_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>